Look up stops near postcode and display departure board for them

--- a/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
+++ b/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PostcodesApi.cs" />
+    <Compile Include="StopPoint.cs" />
     <Compile Include="TflApi.cs" />
   </ItemGroup>
   <ItemGroup>
