--- a/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
+++ b/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
@@ -48,14 +48,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrivalInfo.cs" />
-    <Compile Include="TFLBusStopAPI.cs" />
-    <Compile Include="PostCode.cs" />
-    <Compile Include="PostCodeAPI.cs" />
+    <Compile Include="TFLStopPointAPI.cs" />
+    <Compile Include="PostcodeInfo.cs" />
+    <Compile Include="PostcodeAPI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StopPoint.cs" />
+    <Compile Include="StopPointInfo.cs" />
     <Compile Include="BusArrivalInfo.cs" />
-    <Compile Include="BusArrivals.cs" />
+    <Compile Include="BusStop.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
